New additions for configuration skeleton

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,7 @@
             <% for(var i=0; i < choreSet.length; i++) { %>
               <li><a href="#"><%= choreSet[i].name %></a></li>
             <% } %>
+            <li><a href="/chores">Chores</a></li>
             <li><a href="/config">Config</a></li>
         </ul>
     </div>
