--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,22 +13,7 @@
 
   <main>
     <div class="content">
-      <table class="table">
-        <tr>
-          <th scope="col">Owner</th>
-          <th scope="col">Chore</th>
-          <th scope="col">Complete</th>
-        </tr>
-        <% for(var i=0; i< choreSet.length; i++) { %>
-          <% for(var j=0; j < choreSet[i].chores.length; j++) { %>
-            <tr>
-              <td><%= choreSet[i].name %></td>
-              <td><%= choreSet[i].chores[j].name %></td>
-              <td><%= choreSet[i].chores[j].complete %></td>
-            </tr>
-          <% } %>
-        <% } %>
-      </table>
+      <% include ../partials/choreTable %>
     </div>
   </main>
 
