Added small padding

--- a/views/pages/chores.ejs
+++ b/views/pages/chores.ejs
@@ -28,7 +28,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
-      <div class="theChores">
+      <div class="theChores pt-3">
         <% include ../partials/choreTable %>
       </div>
     </div>
