--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,13 +7,13 @@
           All Chores
         </a>
 
-        <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <% for(var i=0; i < choreSet.length; i++) { %>
-              <li><a href="#"><%= choreSet[i].name %></a></li>
+              <li class="nav-item"><a class="nav-link" href="#"><%= choreSet[i].name %></a></li>
             <% } %>
-            <li><a href="/chores">Chores</a></li>
-            <li><a href="/config">Config</a></li>
+            <li class="nav-item"><a class="nav-link" href="/chores">Chores</a></li>
+            <li class="nav-item"><a class="nav-link" href="/config">Config</a></li>
         </ul>
     </div>
 
